force-app/main/default/objects/Value_Added_Service__c/Value_Added_Service__c.object-meta.xml
<CustomObject>
    <label>Value Added Service</label>
    <nameField>
        <displayFormat>VAS-{00000}</displayFormat>
        <label>Value Added Service</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Added Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>