force-app/main/default/objects/Value_Added_Service__c/fields/Charge_Waived__c.field-meta.xml
<CustomField>
    <fullName>Charge_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Waived</label>
    <type>Checkbox</type>
</CustomField>