force-app/main/default/objects/Value_Added_Service__c/fields/Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge__c</fullName>
    <label>Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>