force-app/main/default/objects/Value_Added_Service__c/fields/Service_Charge_Unit__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Unit__c</fullName>
    <label>Service Charge Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Pair</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Shipment</fullName>
            </value>
            <value>
                <fullName>Strap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>