force-app/main/default/objects/Value_Added_Service__c/fields/Value_Added_Service_Detail__c.field-meta.xml
<CustomField>
    <fullName>Value_Added_Service_Detail__c</fullName>
    <label>Value Added Service Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Value_Added_Service_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After Order is Picked/Packed/Not Shipped (if possible)</fullName>
            </value>
            <value>
                <fullName>ASN&apos;s</fullName>
            </value>
            <value>
                <fullName>Attach Provided Customer Label</fullName>
            </value>
            <value>
                <fullName>Charge Per Pallet</fullName>
            </value>
            <value>
                <fullName>Create, Print, Attach Label</fullName>
            </value>
            <value>
                <fullName>Customer Provided - Inside Unit</fullName>
            </value>
            <value>
                <fullName>Customer Provided - Outside Unit</fullName>
            </value>
            <value>
                <fullName>Heat Treated Pallet Requirements</fullName>
            </value>
            <value>
                <fullName>Holding Weekly Shipments for Consolidation</fullName>
            </value>
            <value>
                <fullName>Inside - Insert entire packing list in each carton</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>One Time Setup/Maintenance</fullName>
            </value>
            <value>
                <fullName>Outside - Insert entire packing list in packing list attachment envelope to each carton</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
            <value>
                <fullName>Per Carton</fullName>
            </value>
            <value>
                <fullName>Per Shipping Carton</fullName>
            </value>
            <value>
                <fullName>Place Customer Provided Insert in Individual Carton</fullName>
            </value>
            <value>
                <fullName>PO Number, Customer Name, Weight, # of Pallets</fullName>
            </value>
            <value>
                <fullName>PO Numbers</fullName>
            </value>
            <value>
                <fullName>Provide and Wrap Bands Around Show Box</fullName>
            </value>
            <value>
                <fullName>Purchase, Create, Print and Attach Label</fullName>
            </value>
            <value>
                <fullName>Purchase, Create, Print and Sew Importer Specialty Labels</fullName>
            </value>
            <value>
                <fullName>Purchase, Create, Print Importer Specialty Labels</fullName>
            </value>
            <value>
                <fullName>Purchase and Attach - Inside Unit</fullName>
            </value>
            <value>
                <fullName>Purchase and Attach Label</fullName>
            </value>
            <value>
                <fullName>Purchase and Attach - Outside Unit</fullName>
            </value>
            <value>
                <fullName>Special Format, Text, Logo, Information - Current Manual Download</fullName>
            </value>
            <value>
                <fullName>Strapping - Per Strap</fullName>
            </value>
            <value>
                <fullName>Taping of Individual Carton (1 Strip of Tape)</fullName>
            </value>
            <value>
                <fullName>Taping of Shipping Case - Special Sourced Tape - Customer Supplied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>