force-app/main/default/objects/Value_Added_Service__c/fields/Value_Added_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Value_Added_Service_Name__c</fullName>
    <label>Value Added Service Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branded Packing List - Drop Ships</fullName>
            </value>
            <value>
                <fullName>Cancellations</fullName>
            </value>
            <value>
                <fullName>Customer Website Entry</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>Inserts</fullName>
            </value>
            <value>
                <fullName>Labels - Case (Shipping) Unit</fullName>
            </value>
            <value>
                <fullName>Labels - Individual Unit</fullName>
            </value>
            <value>
                <fullName>Overpack</fullName>
            </value>
            <value>
                <fullName>Packing List (Int&apos;l Shipments)</fullName>
            </value>
            <value>
                <fullName>Packing - Specific Packing Instructions per Customer Requirement</fullName>
            </value>
            <value>
                <fullName>Palletize</fullName>
            </value>
            <value>
                <fullName>Placards</fullName>
            </value>
            <value>
                <fullName>Rubber Banding Boxes</fullName>
            </value>
            <value>
                <fullName>Security Tags</fullName>
            </value>
            <value>
                <fullName>Storage Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>