force-app/main/default/objects/Value_Added_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Value_Added_Service_Name__c</columns>
    <columns>Value_Added_Service_Detail__c</columns>
    <columns>Service_Charge__c</columns>
    <columns>Service_Charge_Unit__c</columns>
    <columns>Charge_Waived__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>